--- a/package.json
+++ b/package.json
@@ -19,9 +19,13 @@
     "vue": "^3.5.18"
   },
   "devDependencies": {
+    "@tsconfig/node22": "^22.0.2",
+    "@types/node": "^24.3.0",
     "@vitejs/plugin-vue": "^6.0.1",
+    "@vue/tsconfig": "^0.8.1",
     "prettier": "3.6.2",
     "sass": "^1.91.0",
+    "typescript": "^5.9.2",
     "vite": "^7.0.6",
     "vite-plugin-vue-devtools": "^8.0.0"
   }
